# Fabko

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  default.nix  flake.nix  shell.nix  todo.md  vcpkg.json
.github/workflows/: ci-linux.yml  ci-macosx.yml  ci-windows.yml  ci.yml
.nix/: build.nix  default.nix  fabko.nix  import-from-json.nix  nix-cmake.sh  nix-dep.json  nix-run.sh  result  shell.nix
cmake/: fabkoConfig.cmake.in  utils.cmake
dependency/: enet.h
docs/: architecture_fabko.drawio
docs/cnf/: 4-queens-problem.cnf  8-queens-problem.cnf  README.md  pigeon-hole.cnf  propagation-chain.cnf  simple_conflict.cnf  simple_straight.cnf  test.cnf
fabko/: CMakeLists.txt  cli_base.hh  fabko.cpp  fabko.hh  version.hh
fabko/agent/: CMakeLists.txt  action.hh  agent.cpp  agent.hh  blackboard.cpp  blackboard.hh
fabko/agent/protocol/: acl.hh  agent_com.hh  agent_com_local.cpp  agent_com_p2p.cpp  boardcom.hh  boardcom_local.cpp  boardcom_p2p.cpp  fap_request.hh
fabko/blackboard/: boardcom.cpp
fabko/blackboard/cnf/: cnf.cpp  cnf.hh  dimacs_compiler.hh
fabko/common/: exception.hh  logging.cpp  logging.hh  ranges_to.hh  string_utils.hh  visitor_utils.hh
fabko/common/soa/: soa.h  test.cpp
fabko/compiler/: CMakeLists.txt  metadata.hh
fabko/compiler/backend/: Metadata.hh  metadata.h  metadata.hh
fabko/compiler/backend/sat/: cli.hh  solver.cpp  solver.hh  solver_context.cpp  solver_context.hh  solver_impl.cpp
fabko/compiler/frontend/ir/: fabl_ir.cpp  fabl_ir.hh
fabko/compiler/frontend/parser/: ast.hh  concrete_ast.hh  fabl_core.hh  fabl_grammar.hh
fabko/compiler/frontend/sat_builder/: integer_sat_builder.cpp  integer_sat_builder.hh  sat_builder.hh
fabko/compiler/lexer/: Lexer.cpp  Lexer.hh
fabko/compiler/parser/: CMakeLists.txt  ast.hh  lexer.cpp  lexer.hh  parser.cpp  parser.hh  token.hh
fabko/core/: acl.hh  acl.hpp  blackboard.cpp  blackboard.hh  boardcom.cpp  boardcom.hh
fabko/core/cnf/: cnf_compiler.cpp  cnf_compiler.hh  dimacs_compiler.cpp
fabko/core/common/: exception.hh  logging.cpp  logging.hh  ranges_to.hh  string_utils.hh  utils.hh  visitor_utils.hh
fabko/core/logic/: formula.cpp  formula.hh
fabko/core/logic/sat/: assignment_bitset.hh  clause.hh  dimacs_compiler.cpp  dimacs_compiler.hh  helpers.cpp  helpers.hh  solver.cpp  solver.hh
fabko/core/protocol/: boardcom.cpp  boardcom.hh
fabko/core/sat/: assignment_bitset.cpp  assignment_bitset.hh  dimacs_compiler.cpp  helpers.cpp  helpers.hh  solver.cpp  solver.hh
fabko/datastore/: key_value_db.hh  kv_rocksdb.cpp  kv_rocksdb.hh
fabko/peerboard/: peerboard.cpp  peerboard.hh
src/: CMakeLists.txt  fabko.cpp
src/agent/: agent.cpp  agent.hh
src/blackboard/: blackboard.cpp  blackboard.hh  boardcom.cpp  boardcom.hh
src/common/: exception.hh  utils.hh
src/datastore/: key_value_db.hh  kv_rocksdb.cpp  kv_rocksdb.hh
src/peerboard/: agenda.cpp  agenda.hh  peerboard.cpp  peerboard.hh
tests/: CMakeLists.txt  catch_main.cpp  test_kv_rocksdb.cpp
tests/_assets/: test.dimacs
tests/agent/: agent_wanted_interface.cpp  test_acl.cpp
tests/compiler/: parser_testcase.cpp  test_parser.cpp
tests/compiler/soa/: watcher_testcase.cpp
tests/core/: test_acl.cpp  test_assignment_bitset.cpp
tests/core/common/: test_algo_utils.cpp  test_assignment_bitset.cpp
tests/core/logic/: test_formula.cpp  test_set.cpp
tests/core/sat/: test_basic_sat.cpp  test_dimacs_compiler.cpp  test_formula.cpp  test_sat_coloring.cpp  test_sat_four_coloring.cpp  test_set.cpp
tests/peerboard/: test_kv_rocksdb.cpp
